--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ header	{
 
 justify-content: space-between;
 align-items: center;
-border: 1px solid red;
+/*border: 1px solid red;*/
 
 
 }
@@ -82,22 +82,88 @@ a:hover {
 
 
 a,h1,h2,h3,address {
-
 font-family: caps;
-
 }
 
+h1 {
+
+	font-size: 50px;
+	text-align: center;
+}
 
 .hero {
+	/*border: 1px solid red;*/
 
-	width: 100;
 	height: calc(100vh - 60px);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	overflow: hidden;
+	color: #FFFFFF;
+	background-color: #707070;
+
 }
+
+.hero_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*border: 1px solid red;*/
+}
+
+
+.hero_p {
+
+	font-size: 14px;
+	text-align: center;
+	margin-top: 10px;
+	/*border: 1px solid red;*/
+	
+}
+
+
+.hero_a{
+	margin-top: 52px;
+	color: #181818;
+	background-color: #BADC58;
+   	padding: 14px 52px;
+    border: 1px solid #BADC58;
+    border-radius: 10px;
+    transition: color 300ms ease, background-color 300ms ease;
+    font-size: 14px;
+    /*border: 1px solid red;*/
+/*    align-items: flex-end
+*/
+}
+
+
+.hero_a:hover{
+
+background-color: #FFFFFF;
+color: #BADC58;
+border: 1px solid #BADC58;
+transition: color 300ms ease, background-color 300ms ease;
+
+}
+
+
+.hero_scroll {
+    
+	margin-top: 91px;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 10px;
+}
+
+
+
+
+
+
+
+
 
 
 
