--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@ transition: color 300ms ease, background-color 300ms ease;
     font-size: 10px;
 }
 
-.hero_scroll::after {
+.hero_scroll:after {
     content: url('../images/down.png');
     margin-top: 22px;
 }
