--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ h1 {
 	align-items: center;
 	justify-content: center;
 	color: #FFFFFF;
-	background-color: #707070;
+/*	background-color: #707070;*/
 
 }
 
@@ -146,6 +146,13 @@ transition: color 300ms ease, background-color 300ms ease;
 
 }
 
+
+.hero_image {
+
+
+	position: absolute;
+	z-index: -2;
+}
 
 .hero_scroll {
     
