--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@
 	list-style: none;
 
 	font-family: normal;
+	/*border: 1px solid red;*/
 
 }
 
@@ -45,10 +46,11 @@ header	{
 
 justify-content: space-between;
 align-items: center;
-/*border: 1px solid red;*/
-
+/*border: 1px solid red;
+*/
 
 }
+
 
 .burger{
 
@@ -93,7 +95,7 @@ h1 {
 
 .hero {
 	/*border: 1px solid red;*/
-
+	/*position: relative;*/
 	height: calc(100vh - 60px);
 	display: flex;
 	flex-direction: column;
@@ -105,6 +107,7 @@ h1 {
 }
 
 .hero_content {
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -149,13 +152,34 @@ transition: color 300ms ease, background-color 300ms ease;
 
 .hero_image {
 
-
+	width: 100%;
+	height: calc(100vh - 60px);
+	top: 60px;
 	position: absolute;
 	z-index: -2;
+	left: 0;
+	object-fit: cover;
+}
+
+
+.hero::before {
+
+	content: '';
+	display: block;
+	position: absolute;
+	top: 60px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: #181818;
+	opacity: .6;
+	z-index: -1;
+
 }
 
 .hero_scroll {
-    
+    position: absolute;
+    bottom: 20px;
 	margin-top: 91px;
     color: #FFFFFF;
     display: flex;
