--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
 	list-style: none;
 
 	font-family: normal;
-/*	border: 1px solid red;*/
+	border: 1px solid red;
 
 }
 
@@ -386,5 +386,14 @@ footer::after {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100vh;
+    left: 0;
+    right: 0;
+
+}
+.sotialimg{
+
+	height: 20px;
+	width: 20px;
 
 }
